# mcp_learn_py

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cookies.json  docker-compose.prod.yml  docker-compose.yml  pyproject-py39.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
docs/: api_reference.md  deployment.md
nginx/: nginx.conf  nginx.prod.conf
scripts/: backup.sh  deploy.sh  install_browser.sh  login.py  mcp_server.sh  op.MD  start_server.py  stop_server.py  test_client.py
src/: __init__.py  http_server.py  server.py
src/config/: tools.json  tools_config.py
src/core/: tool_providers.py  tool_registry.py
src/prompts/: __init__.py  templates.py
src/resources/: __init__.py  file_manager.py  system_info.py
src/tools/: __init__.py  calculator.py  file_operations.py  web_scraper.py  xiaohongshu_models.py  xiaohongshu_service.py  xiaohongshu_tool.py
src/utils/: __init__.py  config.py  cookie_importer.py  cookie_manager.py  environment.py  logger.py
tests/: __init__.py  test_resources.py  test_server.py  test_tools.py  test_xiaohongshu.py
